--- a/style.css
+++ b/style.css
@@ -1,280 +1,279 @@
 /* General settings */
 body {
-    margin: 0;
-    font-family: Arial, Helvetica, sans-serif;
-  }
-  
-  /* Container */
-  .container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 800px;
-    width: 370px;
-  }
-  
-  /* Storybox */
-  .storybox {
-    background-image: url(lib.jpg);
-    background-color: black;
-    background-position: center;
-    background-size: cover;
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+}
 
-    width: 350px;
-    height: 700px;
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    padding: 15px;
-  }
-  
-  /* Outputbox */
-  .outputbox {
-    background-color: rgb(255, 255, 255,0.9);
-    width: 100%;
-    height: 90%;
-    overflow-y: auto;
-    padding: 10px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    border-radius: 10px;
-    font-size: 15px;
-    overflow-wrap: break-word;
-  }
-  
-  
-  
-  /* Inputbox */
-  .inputbox,
-  .itm-inputbox {
-    background-color: white;
-    width: 100%;
-    height: 50px;
-    margin-top: 20px;
-    padding: 5px;
-    border: 2px solid black;
-  }
-  
-  .inputbox:focus,
-  .itm-inputbox:focus {
-    outline: none;
-  }
-  
-  /* Buttons */
-  .button-container {
-    display: flex;
-    justify-content: space-between;
-    flex-direction: row;
-    gap: 10px;
-    margin-top: 10px;
-  }
-  
- 
-  .button,
-  .ivtclose-btn,
-  .itm-button,
-  .itm-namebox button {
-    background-color: rgb(0, 0, 0);
-    color: white;
-    border: 1px solid white;
-    padding: 5px 10px;
-    font-size: 16px;
-    cursor: pointer;
-  }
-  
-  .button{
-    margin-left: 90px;
-    width: 100px;
-  }
+/* Container */
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 800px;
+  width: 370px;
+}
 
-  .ivnopen-button{
-    background-color: rgb(51, 51, 51);
-    color: white;
-    border: 1px solid white;
-    padding: 5px 10px;
-    font-size: 16px;
-    cursor: pointer;
-    margin-left: 12px;
-  }
+/* Storybox */
+.storybox {
+  background-image: url(lib.jpg);
+  background-position: center;
+  background-size: cover;
 
-  
-  .itm-namebox button {
-    background-color: yellow;
-    border: 1px solid black;
-    color: black;
-    margin: 5px;
-    font-size: 15px;
-  }
-  
-  /* Modal */
-  .st-modal,
-  .hint-modal,
-  .finditem-modal,
-  .already-modal {
-    display: none;
-    position: absolute;
-    z-index: 1;
-    left: 50%;
-    top: 450px;
-    transform: translate(-50%, -50%);
-    width: 250px;
-    height: 15px;
-  }
-  
-  .st-modal-content,
-  .hint-modal-content,
-  .finditem-modal-content,
-  .already-modal-content {
-    background-color: rgba(0, 0, 0, 0.5);
-    color: white;
-    text-align: center;
-    padding: 10px;
-    border-radius: 5px;
-  }
-  
-  .hint-modal-content,
-  .finditem-modal-content {
-    background-color: rgba(0, 0, 0, 0.7);
-  }
-  
-  .st-modal.active,
-  .hint-modal.active,
-  .finditem-modal.active,
-  .already-modal.active {
-    display: block;
-  }
-  
+  width: 350px;
+  height: 700px;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  padding: 15px;
+}
+
+/* Outputbox */
+.outputbox {
+  background-color: rgb(255, 255, 255,0.9);
+  width: 100%;
+  height: 90%;
+  overflow-y: auto;
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  border-radius: 10px;
+  font-size: 15px;
+  overflow-wrap: break-word;
+}
+
+
+
+/* Inputbox */
+.inputbox,
+.itm-inputbox {
+  background-color: white;
+  width: 100%;
+  height: 50px;
+  margin-top: 20px;
+  padding: 5px;
+  border: 2px solid black;
+}
+
+.inputbox:focus,
+.itm-inputbox:focus {
+  outline: none;
+}
+
+/* Buttons */
+.button-container {
+  display: flex;
+  justify-content: space-between;
+  flex-direction: row;
+  gap: 10px;
+  margin-top: 10px;
+}
+
+
+.button,
+.ivtclose-btn,
+.itm-button,
+.itm-namebox button {
+  background-color: rgb(0, 0, 0);
+  color: white;
+  border: 1px solid white;
+  padding: 5px 10px;
+  font-size: 16px;
+  cursor: pointer;
+}
+
+.button{
+  margin-left: 90px;
+  width: 100px;
+}
+
+.ivnopen-button{
+  background-color: rgb(255, 230, 0);
+  color: rgb(0, 0, 0);
+  border: 1px solid white;
+  padding: 5px 10px;
+  font-size: 16px;
+  cursor: pointer;
+  margin-left: 12px;
+}
+
+
+.itm-namebox button {
+  background-color: yellow;
+  border: 1px solid black;
+  color: black;
+  margin: 5px;
+  font-size: 15px;
+}
+
+/* Modal */
+.st-modal,
+.hint-modal,
+.finditem-modal,
+.already-modal {
+  display: none;
+  position: absolute;
+  z-index: 1;
+  left: 50%;
+  top: 450px;
+  transform: translate(-50%, -50%);
+  width: 250px;
+  height: 15px;
+}
+
+.st-modal-content,
+.hint-modal-content,
+.finditem-modal-content,
+.already-modal-content {
+  background-color: rgba(0, 0, 0, 0.5);
+  color: white;
+  text-align: center;
+  padding: 10px;
+  border-radius: 5px;
+}
+
+.hint-modal-content,
+.finditem-modal-content {
+  background-color: rgba(0, 0, 0, 0.7);
+}
+
+.st-modal.active,
+.hint-modal.active,
+.finditem-modal.active,
+.already-modal.active {
+  display: block;
+}
+
 /* Item namebox */
 .itm-namebox {
-    display: flex;
-    flex-direction: column;
-    background-color: aliceblue;
-    width: 100%;
-    height: 70%;
-    overflow-y: auto;
-    padding: 10px;
-    align-items: center;
-    text-align: center;
+  display: flex;
+  flex-direction: column;
+  background-color: aliceblue;
+  width: 100%;
+  height: 70%;
+  overflow-y: auto;
+  padding: 10px;
+  align-items: center;
+  text-align: center;
 }
-  
-  /* Item infobox */
-  .itm-infobox {
-    background-color: #E0E0E0;
-    width: 100%;
-    height: 60%;
-    margin-top: 20px;
-    padding: 5px;
-    border: 2px solid black;
-  }
-  
-  /* Item inputbox */
-  .itm-inputbox {
-    background-color: white;
-    width: 100%;
-    height: 50px;
-    margin-top: 20px;
-    padding: 5px;
-    border: 2px solid black;
-  }
-  
-  .itm-inputbox:focus {
-    outline: none;
-  }
-  
-  /* Item button */
-  .itm-button {
-    background-color: black;
-    color: white;
-    border: none;
-    padding: 5px 10px;
-    font-size: 16px;
-    width: 100px;
-    cursor: pointer;
-    margin-left: 65px;
-  }
-  
-  /* Close button */
-  .ivtclose-btn {
-    background-color: black;
-    color: white;
-    border: none;
-    padding: 5px 10px;
-    font-size: 16px;
-    cursor: pointer;
-    margin-top: 10px;
-  }
-  
-  /* Item namebox button */
-  .itm-namebox button {
-    background-color: yellow;
-    border: 1px solid black;
-    color: black;
-  }
-  
-  /* Select class */
-  .select {
-    font-weight: bold;
-    font-size: 15px;
-  }
-  
-  .modal-dialog {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    margin-top: 50px;
-  }
-  
 
-  /* Modal content */
-  .modal-content {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    background-color: rgb(254, 254, 92);
-    width: 300px;
-    height: 600px;
-  }
-  
-  /* Modal body */
-  .modal-body {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    background-color: rgb(254, 254, 92);
-    width: 100%;
-  }
-  
+/* Item infobox */
+.itm-infobox {
+  background-color: #E0E0E0;
+  width: 100%;
+  height: 60%;
+  margin-top: 20px;
+  padding: 5px;
+  border: 2px solid black;
+}
 
-  
+/* Item inputbox */
+.itm-inputbox {
+  background-color: white;
+  width: 100%;
+  height: 50px;
+  margin-top: 20px;
+  padding: 5px;
+  border: 2px solid black;
+}
 
-  /* Paragraph style */
-  .pp {
-    font-weight: bold;
-    color: blue;
-    white-space: pre-line;
-  }
-  
-  .books {
-    font-family: 'Indie Flower', cursive;
-    font-style: italic;
-    font-size: 16px;
-    font-weight: bold;
+.itm-inputbox:focus {
+  outline: none;
+}
+
+/* Item button */
+.itm-button {
+  background-color: black;
+  color: white;
+  border: none;
+  padding: 5px 10px;
+  font-size: 16px;
+  width: 100px;
+  cursor: pointer;
+  margin-left: 65px;
+}
+
+/* Close button */
+.ivtclose-btn {
+  background-color: black;
+  color: white;
+  border: none;
+  padding: 5px 10px;
+  font-size: 16px;
+  cursor: pointer;
+  margin-top: 10px;
+}
+
+/* Item namebox button */
+.itm-namebox button {
+  background-color: yellow;
+  border: 1px solid black;
+  color: black;
+}
+
+/* Select class */
+.select {
+  font-weight: bold;
+  font-size: 15px;
+}
+
+.modal-dialog {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 50px;
+}
+
+
+/* Modal content */
+.modal-content {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  background-color: rgb(254, 254, 92);
+  width: 300px;
+  height: 600px;
+}
+
+/* Modal body */
+.modal-body {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  background-color: rgb(254, 254, 92);
+  width: 100%;
+}
+
+
+
+
+/* Paragraph style */
+.pp {
+  font-weight: bold;
+  color: blue;
+  white-space: pre-line;
+}
+
+.books {
+  font-family: 'Indie Flower', cursive;
+  font-style: italic;
+  font-size: 16px;
+  font-weight: bold;
 }
 
 .roses {
-    font-family: 'Indie Flower', cursive;
-    font-size: 15px;
+  font-family: 'Indie Flower', cursive;
+  font-size: 15px;
 }
 
 .small {
